<resources>
    <string name="app_name">Authenticator</string>
    <string name="add_new_2fa">Add new 2FA</string>
    <string name="scan_qr_code">Scan a QR code</string>
    <string name="enter_setup_key">Enter a setup key</string>
    <string name="how_it_work">How it works</string>
    <string name="time_correction">Time correction</string>
    <string name="sync_now">Sync time now</string>
    <string name="about_feature">About this feature</string>
    <string name="help_feedback">Help and feedback</string>
    <string name="backup_data">Backup data</string>
    <string name="restore_data">Restore data</string>
    <string name="give_feedback">Give feedback</string>
    <string name="scan_a_qr_code">Scan a QR code</string>
    <string name="enter_a_setup_key">Enter a setup key</string>
    <string name="one_time_passwords_enabled">One-time passwords enabled</string>
    <string name="you_can_use_the_one_time_password_codes">You can use the one-time password codes generated by this app to verify your sign-ins</string>
    <string name="one_time_password_code">One-time password code</string>
    <string name="remove_account">Remove account</string>
    <string name="add_new_2fa_code_by_clicking">Add new 2FA code by clicking add (+) button at the right-bottom corner of screen</string>
    <string name="sign_in">Sign In</string>
    <string name="you_have_no_2fa_code_yet">You have no 2FA code yet</string>
    <string name="or_you_can_sign_in_via_google_account_to_sync_your_old_code">Or you can sign in via google account to sync your old codes</string>
    <string name="copy_code_clipboard">Code copied to the clipboard</string>
    <string name="enter_account_details">Enter account details</string>
    <string name="account_name">Account name</string>
    <string name="title">title</string>
    <string name="back_button">back button</string>
    <string name="your_key">Secret key</string>
    <string name="site_name_eg_google">Site name (eg. Google)</string>
    <string name="add">Add</string>
    <string name="site_name">Site name</string>
    <string name="google">Google</string>
    <string name="other_site_name">Other site name</string>
    <string name="site_icon">site icon</string>
    <string name="export_this_2fa_code">Export this 2FA code</string>
    <string name="others">Others</string>
    <string name="invalid_site_name_error">Invalid site name</string>
    <string name="invalid_account_name_error">Invalid account name</string>
    <string name="invalid_key_error">Invalid key</string>
    <string name="enter_key_success">Enter key successfully</string>
    <string name="delete_code_success">Your code was removed</string>
    <string name="remove_account_confirm">Remove account?</string>
    <string name="warning_remove_account">After removing your account, you will not be able to use this device to verify your identity</string>
    <string name="update">update</string>
    <string name="cancel">Cancel</string>
    <string name="edit_code_detail">Edit code detail</string>
    <string name="update_success_notification">Update successfully</string>
    <string name="permission_denied">Permissions not granted by the user</string>
    <string name="scan_qr_success">Add key via QR code successfully</string>
    <string name="invalid_qr_code">Invalid QR code</string>
    <string name="export_account">Export account?</string>
    <string name="export_code_warning">Do you want to export your account to QR Code</string>
    <string name="scan_this_qr_code">Scan this QR code</string>
    <string name="download_any_authenticator_app">Download any authenticator app on your new device. Within the app, scan this QR code.</string>
    <string name="done">done</string>
    <string name="show_codes">Show codes</string>
    <string name="hide_codes">Hide codes</string>
    <string name="sync_time_success">Sync time successfully.\n(Your device time was not changed)</string>
    <string name="server_time_error">Can not connect to server</string>
    <string name="choose_mail_app">Choose an mail app</string>
    <string name="feedback_for_za_authenticator">Feedback for ZA Authenticator</string>
    <string name="pin_your_code">Pin this 2FA code</string>
    <string name="copy">Copy</string>
    <string name="sign_in_success">Sign in successfully</string>
    <string name="accounts">Accounts</string>
    <string name="request_sign_in">Requesting sign-in</string>
    <string name="must_have_one_code">You must have at least one code to backup data</string>
    <string name="yes">yes</string>
    <string name="confirm_sign_in">Confirm sign in?</string>
    <string name="you_must_sign_in">You must sign in with google account to backup data</string>
    <string name="no">No</string>
    <string name="backup_success">Backup data success</string>
    <string name="fail_connect_server">Failed to connect server</string>
    <string name="start_backup">Start backup...</string>
    <string name="data_empty">Data is empty</string>
    <string name="start_restore">Start restore...</string>
    <string name="restore_success">Restore successfully</string>
</resources>
