<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curve">

    <EditText
        android:inputType="text"
        android:id="@+id/siteName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/site_name"
        app:layout_constraintEnd_toEndOf="@+id/accountNameLayout"
        app:layout_constraintStart_toStartOf="@+id/accountNameLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:inputType="text"
        android:id="@+id/accountNameLayout"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/account_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siteName"
        android:importantForAutofill="no" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_custom"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/accountNameLayout"
        app:layout_constraintTop_toBottomOf="@+id/accountNameLayout" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/button_custom"
        android:text="@android:string/cancel"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/update"
        app:layout_constraintStart_toStartOf="@+id/accountNameLayout"
        app:layout_constraintTop_toTopOf="@+id/update" />

</androidx.constraintlayout.widget.ConstraintLayout>
