<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="myViewModel"
            type="com.za.androidauthenticator.viewmodel.EnterKeyViewModel" />
        <variable
            name="myController"
            type="com.za.androidauthenticator.view.activities.EnterKeyActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.za.androidauthenticator.view.activities.EnterKeyActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/back_button"
                android:onClick="@{() -> myController.onBackPressed()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/enter_account_details"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/backButton"
                app:layout_constraintStart_toEndOf="@+id/backButton"
                app:layout_constraintTop_toTopOf="@+id/backButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/siteNameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/textColor"
                    app:layout_constraintBottom_toTopOf="@+id/otherSiteLayout"
                    app:layout_constraintEnd_toEndOf="@+id/otherSiteLayout"
                    app:layout_constraintStart_toStartOf="@+id/otherSiteLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread">

                    <AutoCompleteTextView
                        android:id="@+id/siteName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/site_name"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:visibility="gone"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    android:id="@+id/otherSiteLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="@string/other_site_name"
                    app:layout_constraintBottom_toTopOf="@+id/accountNameLayout"
                    app:layout_constraintEnd_toEndOf="@+id/accountNameLayout"
                    app:layout_constraintStart_toStartOf="@+id/accountNameLayout"
                    app:layout_constraintTop_toBottomOf="@+id/siteNameLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/otherSite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/defaultTextView"
      />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/accountNameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="@string/account_name"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:layout_constraintBottom_toTopOf="@+id/keyLayout"
                    app:layout_constraintEnd_toEndOf="@+id/keyLayout"
                    app:layout_constraintStart_toStartOf="@+id/keyLayout"
                    app:layout_constraintTop_toBottomOf="@+id/otherSiteLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/accountName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/defaultTextView" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/keyLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="@string/your_key"
                    app:layout_constraintBottom_toTopOf="@+id/update"
                    app:layout_constraintEnd_toEndOf="@+id/update"
                    app:layout_constraintStart_toStartOf="@+id/update"
                    app:layout_constraintTop_toBottomOf="@+id/accountNameLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/key"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/defaultTextView" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:onClick="@{() -> myController.insertNewCode()}"
                    android:id="@+id/update"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:background="@drawable/button_custom"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/keyLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
